@@ -1,3 +1,10 @@
+2015-04-14  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* gnus-art.el (gnus-use-idna):
+	* gnus-sum.el (gnus-summary-idna-message):
+	* message.el (message-use-idna):
+	Catch the invalid-operation that idna.el will issue.
+
 2015-04-14  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* gnus-group.el (gnus-group--setup-tool-bar-update):
